--- a/templates/tftp.service.j2
+++ b/templates/tftp.service.j2
@@ -8,7 +8,7 @@ StartLimitInterval=0
 [Service]
 Type=simple
 Restart=always
-ExecStart=/usr/bin/python3.7 {{ tftp_install_dir }}/tftp.py -b http -r http://localhost/
+ExecStart={{ tftp_python_bin }} {{ tftp_install_dir }}/tftp.py -b http -r http://localhost/
 ExecReload=/bin/kill -HUP $MAINPID
 SyslogIdentifier=tftp
 RestartSec=1
